--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,6 +40,5 @@ jobs:
             git add _data
             git config user.name "GitHub Actions" && git config user.email "actions@users.noreply.github.com"
             git commit -m "Update generated docs via GitHub action"
-            git remote set-url origin https://sbolbot:$GH_TOKEN@github.com/sboltools/sboltools.github.io.git
-            git push
+            git push https://sbolbot:$GH_TOKEN@github.com/sboltools/sboltools.github.io.git master
 
