--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./dist/src/main.js",
   "license": "MIT",
   "scripts": {
+    "clean": "rm -rf dist",
     "build": "./node_modules/typescript/bin/tsc -d -p . --outDir dist",
     "package": "./node_modules/webpack/bin/webpack.js",
     "makedist": "node ./makedist.js",
@@ -19,7 +20,7 @@
     "node-fetch": "^2.6.0",
     "promise-fs": "^2.1.1",
     "rdfoo": "^0.9.0",
-    "sbolgraph": "^0.27.0",
+    "sbolgraph": "^0.30.0",
     "string-argv": "^0.3.1"
   },
   "preferGlobal": true,
