--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,5 +40,5 @@ jobs:
             git add _data
             git config user.name "GitHub Actions" && git config user.email "actions@users.noreply.github.com"
             git commit -m "Update generated docs via GitHub action"
-            git push https://sbolbot:$GH_TOKEN@github.com/sboltools/sboltools.github.io.git master
+            git push https://sbolbot:$GITHUB_TOKEN@github.com/sboltools/sboltools.github.io.git master
 
