--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,7 +38,7 @@ jobs:
             mkdir -p _data
             cp ../actions.json _data/
             git add _data
-            git config user.name "GitHub Actions" && git config user.email "actions@users.noreply.github.com"
+            git config user.name "sbolbot" && git config user.email "sbolbot@sboltools.org"
             git commit -m "Update generated docs via GitHub action"
             git push https://sbolbot:$GITHUB_TOKEN@github.com/sboltools/sboltools.github.io.git master
 
