--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "json-colorizer": "^2.2.2",
     "node-fetch": "^2.6.1",
     "promise-fs": "^2.1.1",
-    "rdfoo": "^0.11.0",
-    "sbolgraph": "^0.37.0",
+    "rdfoo": "udp/rdfoo",
+    "sbolgraph": "sboltools/sbolgraph",
     "string-argv": "^0.3.1"
   },
   "preferGlobal": true,
