--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/chalk": "^2.2.0",
     "@types/node": "^14.0.13",
     "@types/yargs": "^15.0.4",
-    "bioterms": "^0.18.0",
+    "bioterms": "udp/bioterms",
     "chalk": "^4.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
