--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@types/chalk": "^2.2.0",
     "@types/node": "^14.0.13",
     "@types/yargs": "^15.0.4",
-    "bioterms": "udp/bioterms",
+    "bioterms": "^0.20.0",
     "chalk": "^4.0.0",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
     "json-colorizer": "^2.2.2",
     "node-fetch": "^2.6.1",
     "promise-fs": "^2.1.1",
-    "rdfoo": "udp/rdfoo",
-    "sbolgraph": "sboltools/sbolgraph",
+    "rdfoo": "^0.12.0",
+    "sbolgraph": "^0.39.0",
     "string-argv": "^0.3.1"
   },
   "preferGlobal": true,
