--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,8 @@ jobs:
             rm -f _data/actions.json
             mkdir -p _data
             cp ../actions.json _data/
-            git add _data
+            echo $GITHUB_SHA > hash
+            git add _data hash
             git config user.name "GitHub Actions" && git config user.email "actions@users.noreply.github.com"
             git commit -m "Update generated docs via GitHub action"
             git config -l | grep 'http\..*\.extraheader' | cut -d= -f1 | xargs -L1 git config --unset-all
