--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,8 +50,8 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
           with:
-            tag_name: release-${{ github.run_number }}
-            release_name: Release ${{ github.run_number }}
+            tag_name: ${GITHUB_REF##*/}
+            release_name: ${GITHUB_REF##*/}
             draft: false
             prerelease: false
         - name: Upload unix zip
