--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
           run: npm install
         - name: Install dev dependencies
           run: npm install --only=dev
+        - name: Show sbolgraph version for debug purposes
+          run: npm ls sbolgraph
         - name: TypeScript build
           run: npm run build
         - name: Package
@@ -50,8 +52,8 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
           with:
-            tag_name: ${GITHUB_REF##*/}
-            release_name: ${GITHUB_REF##*/}
+            tag_name: ${{ github.ref }}
+            release_name: ${{ github.ref }}
             draft: false
             prerelease: false
         - name: Upload unix zip
