--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "json-colorizer": "^2.2.2",
     "node-fetch": "^2.6.1",
     "promise-fs": "^2.1.1",
-    "rdfoo": "^0.15.0",
-    "sbolgraph": "^0.51.0",
+    "rdfoo": "=0.17.0",
+    "sboljs": "=3.0.1",
     "string-argv": "^0.3.1"
   },
   "preferGlobal": true,
