--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,15 @@ jobs:
             release_name: ${{ github.ref }}
             draft: false
             prerelease: false
+        - name: Upload sbol.js
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: sbol.js
+            asset_name: sbol.js
+            asset_content_type: text/javascript 
         - name: Upload unix zip
           uses: actions/upload-release-asset@v1
           env:
