make running tests an action

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "node watch.js",
     "package": "node build.js",
     "makedist": "node ./makedist.js",
-    "test": "./node_modules/typescript/bin/tsc -d -p . --outDir dist && NODE_PATH=dist node dist/test/run-tests.js"
+    "test": "node build.js && node sbol.js run-tests"
   },
   "dependencies": {
     "@types/chalk": "^2.2.0",
