--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "rm -rf bundle.js",
     "build": "node build.js",
+    "build-browser": "node build_browser.js",
     "watch": "node watch.js",
     "package": "node build.js",
     "makedist": "node ./makedist.js",
@@ -16,15 +17,18 @@
     "@types/node": "^14.0.13",
     "@types/yargs": "^15.0.4",
     "bioterms": "^0.25.0",
+    "browserfs": "^1.4.3",
     "chalk": "^4.0.0",
     "esbuild": "^0.14.39",
     "glob": "^7.1.6",
     "glob-promise": "^3.4.0",
     "json-colorizer": "^2.2.2",
     "node-fetch": "^2.6.1",
+    "node-stdlib-browser": "^1.2.0",
     "promise-fs": "^2.1.1",
     "rdfoo": "=0.18.0",
     "sboljs": "=3.0.2",
+    "shell-quote": "^1.7.3",
     "string-argv": "^0.3.1"
   },
   "preferGlobal": true,
