update workflow for sbolgraph -> sboljs3

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
           run: npm install
         - name: Install dev dependencies
           run: npm install --only=dev
-        - name: Show sbolgraph version for debug purposes
-          run: npm ls sbolgraph
+        - name: Show sboljs3 version for debug purposes
+          run: npm ls sboljs3
         - name: TypeScript build
           run: npm run build
         - name: Package
